# nioc-neurips

./: README.md  example.py  fig2-likelihood.py  fig4_infoseeking.py  plot_utils.py  pyproject.toml  requirements.txt
nioc/: __init__.py  utils.py
nioc/belief/: __init__.py  kf.py  utils.py
nioc/control/: __init__.py  gilqg.py  gilqr.py  glqg.py  glqr.py  ilqg_fixed.py  ilqr.py  ilqr_fixed.py  lqg.py  lqr.py  policy.py  spec.py
nioc/envs/: __init__.py  base.py  env_utils.py  lightdark.py  navigation.py  nonlinear_reaching.py  wrappers.py
nioc/envs/classic_control/: cartpole.py  pendulum.py
nioc/infer/: __init__.py  base.py  inv_ilqg.py  inv_ilqr.py  inv_maxent.py  optim.py  utils.py
tests/: control_util_test.py  envs.py  ilqg_test.py  ilqr_test.py  linearizer_test.py  lqg_test.py  lqr_test.py
